add SiftMatcher class with interface, add default parameters for SiftMatcher, execute sift with different parameters in program.cs

--- a/OpenCvSharp/OpenCvSharp.csproj
+++ b/OpenCvSharp/OpenCvSharp.csproj
@@ -58,9 +58,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Infrastructure\Abstract\ISiftMatcher.cs" />
+    <Compile Include="Infrastructure\Concrete\SiftMatcher.cs" />
     <Compile Include="Infrastructure\Const\FilePath.cs" />
     <Compile Include="Infrastructure\Concrete\SiftSurf.cs" />
-    <Compile Include="Infrastructure\Abstract\ISample.cs" />
+    <Compile Include="Infrastructure\Abstract\IMatcher.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
