--- a/OpenCvSharp/packages.config
+++ b/OpenCvSharp/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="FreeSpire.Office" version="3.0" targetFramework="net461" />
   <package id="OpenCvSharp3-AnyCPU" version="3.4.4.20181118" targetFramework="net461" />
 </packages>
